--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h3{
     text-align: center;
 }
 
-div{
+#about{
     border: 3px dashed yellowgreen;
     text-decoration: aqua;
     text-align: center;
@@ -32,3 +32,24 @@ table{
     margin-left: auto;
     margin-right: auto;
 }
+
+#me{
+    padding: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+    border: 1px solid #ddd;
+}
+
+.skills{
+    padding: 5px;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 0px solid #ddd;
+}
+
+.skills:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  }
