--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 h1{
-    color: darkmagenta;
+    color: whitesmoke;
     text-align: center;
 }
-
+h2{
+    text-align: center;
+    color: whitesmoke;
+}
 h3{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: unset;
     text-decoration:solid ;
     text-align: center;
+    color:whitesmoke;
 }
 
 #about{
@@ -38,18 +42,42 @@ table{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 50%;
+    border-radius: 10%;
     border: 1px solid #ddd;
 }
 
-.skills{
+#skills{
     padding: 5px;
     display:block;
     margin-left: auto;
     margin-right: auto;
     border: 0px solid #ddd;
+    background-color: black;
 }
 
-.skills:hover {
+#skills:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
   }
+
+  header{
+      background-image: url(../images/back1.jpg);
+      height: 100vh;
+    margin-bottom: 1rem;
+    background-size: 100%, cover;
+    background-position: right bottom, left top;
+    background-repeat: no-repeat, no-repeat;
+    background-attachment: scroll, fixed;
+    position: relative;
+  }
+  #hello,#name{
+    font-size: 2.5rem;
+    font-weight: 700;
+    letter-spacing: 1.1rem;
+    color: whitesmoke;
+    text-align: center;
+}
+.name{
+
+    margin: 50%,50%;
+}
+  
