--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 h1{
     color: whitesmoke;
     text-align: center;
+    padding: 50px;
 }
 h2{
     text-align: center;
@@ -59,16 +60,7 @@ table{
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
   }
 
-  header{
-      background-image: url(../images/back1.jpg);
-      height: 100vh;
-    margin-bottom: 1rem;
-    background-size: 100%, cover;
-    background-position: right bottom, left top;
-    background-repeat: no-repeat, no-repeat;
-    background-attachment: scroll, fixed;
-    position: relative;
-  }
+ 
   #hello,#name{
     font-size: 2.5rem;
     font-weight: 700;
@@ -80,4 +72,31 @@ table{
 
     margin: 50%,50%;
 }
+
+.intro{
+    background-image: url(../images/back1.jpg);
+    height: 100vh;
+    text-align: center;
+    
+}
   
+.navbar{
+    border-radius: 15px;
+    background-color: violet;
+}
+
+li{
+    list-style: none;
+    margin: 0%;
+    padding: 40px;
+    display: inline;
+    font-size: 20px;
+}
+
+li a{
+    text-decoration: none;
+    color: gold;
+}
+.social{
+    text-align: center;
+}
