--- a/css/style.css
+++ b/css/style.css
@@ -47,18 +47,7 @@ table{
     border: 1px solid #ddd;
 }
 
-#skills{
-    padding: 5px;
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
-    border: 0px solid #ddd;
-    background-color: black;
-}
 
-#skills:hover {
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-  }
 
  
   #hello,#name{
@@ -75,6 +64,7 @@ table{
 
 .intro{
     background-image: url(../images/back1.jpg);
+    background-repeat: no-repeat;
     height: 100vh;
     text-align: center;
     
@@ -82,7 +72,8 @@ table{
   
 .navbar{
     border-radius: 15px;
-    background-color: violet;
+    background-color: rgb(156, 43, 201);
+    padding: 10px;
 }
 
 li{
@@ -95,8 +86,12 @@ li{
 
 li a{
     text-decoration: none;
-    color: gold;
+    color: black;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 .social{
     text-align: center;
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 24px;
 }
