--- a/css/skills.css
+++ b/css/skills.css
@@ -1,15 +1,16 @@
 #skills{
     padding: 5px;
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
-    border: 0px solid #ddd;
-    background-color: black;
+    display:inline-flex;
+    background-repeat: no-repeat;
+    height: auto;
+    width: auto;
+    text-align: center;
 }
 
+
 #cpro,#bbh{
-    display: flex;
     width: 20%;
     height: 20%;
-    align-content: center;
+    margin:auto;
+    padding:auto;
 }
