--- a/css/academics.css
+++ b/css/academics.css
@@ -1,22 +1,27 @@
 #academics{
-  background-image: url(../images/hackback.jpg);
   color: whitesmoke;
-  height: 100vh;
-  width:100vh;
+  /* height: 100%;
+  width:100%; */
   font-size: 3em;
   font-weight: bold;
   background-repeat: no-repeat;
   align-content: center;
-  margin-left: 500px;
+  /* margin-left: 500px; */
+  background-size: cover;
 }
 table{
   text-align: center;
   margin: 5%;
   margin-left: auto;
   margin-right: auto;
-  border: 0px;
 }
-td,th{
+td{
   border: 0px;
   padding: 5px;
+  color: chocolate;
+}
+th{
+  border: 0px;
+  padding: 5px;
+  color: darksalmon;
 }
