--- a/css/academics.css
+++ b/css/academics.css
@@ -19,9 +19,11 @@ td{
   border: 0px;
   padding: 5px;
   color: chocolate;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 th{
   border: 0px;
   padding: 5px;
   color: darksalmon;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
