--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h3{
 
 #about{
     background-image: url(../images/about.jpg);
+    background-repeat: no-repeat;
     border: 0px;
     text-align: center;
     font-size: 28px;
